完成部分分析看板布局

--- a/src/assets/stylus/schema/index.styl
+++ b/src/assets/stylus/schema/index.styl
@@ -1,228 +1,8 @@
-@import "../base/mixins.styl"
-@import "schema-var.styl"
-@import "overlay.styl"
-@import "setting-panel.styl"
-.bi-screen-container {
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  .dashboard-page {
-    display: flex;
-    width: 100%;
-    height: calc(100% - 50px);
-    .page-left {
-      width: calc(100% - 400px);
-      height: 100%;
-    }
-    .page-right {
-      width: 400px;
-      background: #2b3551;
-      height: 100%;
-    }
-  }
-
-
-  // 顶部操作栏
-  .action-panel {
-    height: 50px;
-    display: flex;
-    background-color: $header-bg;
-    .header-container {
-      width: 100%;
-      height: 50px;
-      background-color: $header-bg;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: nowrap;
-      .simple-header-left, .simple-header-right {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-      .simple-header-icon {
-        cursor: pointer;
-        border-right: 1px solid hsla(0, 0%, 100%, .2);
-        height: 50px;
-        width: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .simple-cube-icon {
-        height: 20px;
-        > i {
-          margin: 0 10px 0 14px;
-          font-size: 20px;
-        }
-      }
-      .simple-header-input {
-        background-color: transparent;
-        font-size: 16px;
-        height: 30px;
-        max-width: 236px;
-        min-width: 30px;
-        border: 1px solid transparent;
-        border-radius: 0;
-        color: #fff;
-        line-height: 30px;
-        padding: 4px 11px;
-        outline: none;
-        &:focus, &:active, &:focus-visible {
-          border: 1px solid getColor();
-        }
-      }
-    }
-    .cube-btn {
-      height: 100%;
-      .primary-btn {
-        cursor: pointer;
-        display: inline-block;
-        width: 100px;
-        height: 28px;
-        text-align: center;
-        line-height: 26px;
-        color: #ffffff;
-        background-color: getColor();
-        border: 1px solid getColor();
-        border-radius: 14px;
-        &.transparent {
-          background-color: transparent;
-        }
-        + .primary-btn {
-          margin-left: 14px;
-        }
-      }
-    }
-    .cube-navigator .iconfont {
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      cursor: pointer;
-      font-size: 16px;
-      margin: 0 20px;
-      position: relative;
-      top: 2px;
-    }
-  }
-
-
-  // 组件条
-  .components-bar-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    background: $bg-color-2;
-    padding: 5px 0 5px 50px;
-    height: 45px;
-    border-right: 1px solid hsla(0, 0%, 100%, .1);
-    .components-panel {
-      .components-charts {
-        display: flex;
-        align-items: center;
-        background-color: rgba(0, 0, 0, .15)
-        .components-item {
-          position: relative;
-          margin: 0 2px;
-          width: 35px;
-          height: 35px;
-          .item-icon {
-            width: 70px;
-            height: 70px;
-            display: block;
-            position: relative;
-            left: 0;
-            top: 0;
-            background-image: url('@/assets/images/schema/schema.png');
-            background-repeat: no-repeat;
-            transform: scale(.5);
-            transform-origin: left top;
-            cursor: pointer;
-            background-position: -304px -1035px;
-          }
-          &:hover {
-            background-color: #0b1532;
-          }
-        }
-      }
-      .page-config-entry {
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        color: hsla(0, 0%, 100%, .65);
-        cursor: pointer;
-      }
-    }
-  }
-
-
-  // canvas画布面板
-  .schema-canvas-wrap {
-    width: 100%;
-    height: calc(100% - 45px);
-    .editor-container {
-      height: 100%;
-      position: relative;
-      overflow: auto;
-      .editor-container-main {
-        min-height: 100%;
-        padding: 5px;
-        background: #f0f2f5;
-      }
-    }
-  }
-
-
-  // 页面配置面板
-  .page-config-panel {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background: $bg-color;
-    .page-config-top {
-      height: 45px;
-      line-height: 45px;
-      background: $bg-color-2;
-      color: #fff;
-      font-size: 16px;
-      padding: 0 12px;
-    }
-    .page-config-content {
-      overflow-y: auto;
-      overflow-x: hidden;
-      padding-top: 0;
-      padding-bottom: 10px;
-      background: $bg-color;
-      height: calc(100% - 45px);
-      .page-config-content-tabs {
-        height: 100%;
-        .tabs-wrapper {
-          display: flex;
-          background: $bg-color-2;
-          height: 28px;
-          border-bottom: 1px solid $bg-color;
-          .tab-item {
-            cursor: pointer;
-            width: 50%;
-            color: rgba(255, 255, 255, .7);
-            text-align: center;
-            line-height: 28px;
-            font-size: 12px;
-            &.active {
-              background: $bg-color;
-            }
-          }
-        }
-        .setting-content {
-          padding: 0 8px;
-          height: calc(100% - 28px);
-          overflow: auto;
-        }
-      }
-    }
-  }
-
-}
+@import "base.styl"
+@import "wrap.styl"
+@import "header-bar.styl"
+@import "layer-panel.styl"
+@import "components-panel.styl"
+@import "canvans-main.styl"
+@import "config-panel.styl"
 
