--- a/src/assets/stylus/schema/config-panel.styl
+++ b/src/assets/stylus/schema/config-panel.styl
@@ -42,4 +42,155 @@
     overflow-x: hidden;
     height: calc(100% - 30px);
   }
+  .tabs-wrapper {
+    display: flex;
+    .tab-item {
+      flex: 1;
+      cursor: pointer;
+      border-top: 2px solid transparent;
+      color: #bcc9d4;
+      height: 30px;
+      line-height: 30px;
+      background: var(--schema-color-bg-deep);
+      > i {
+        position: relative;
+        top: -1px;
+      }
+      &.active {
+        color: var(--bin-color-primary);
+        border-top-color: var(--bin-color-primary);
+        background: var(--schema-color-bg-dark);
+      }
+    }
+  }
+}
+// 参数设置样式
+.setting-panel {
+
+}
+// 数据中心面板样式
+.data-center-panel {
+  height: 100%;
+  display: flex;
+  .data-config-left, .data-config-right {
+    width: 50%;
+    font-size: 12px;
+    height: 100%;
+  }
+  .data-config-left {
+    height: 100%;
+    position: relative;
+    border-right: 1px solid #000000;
+  }
+  .data-config-right {
+    position: relative;
+    height: 100%;
+    font-size: 12px;
+    .tree-box {
+      padding: 5px 0;
+      height: 50%;
+      overflow-y: auto;
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50%;
+      height: 1px;
+      background: var(--schema-color-border);
+    }
+  }
+  .config-data-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    .config-data-panel {
+      height: calc(100% - 39px);
+      overflow-x: hidden;
+      overflow-y: auto;
+      .config-data-item {
+        position: relative;
+        padding: 0 6px 12px;
+        border-bottom: 1px solid var(--schema-color-border);
+        .area-name {
+          color: #fff;
+          white-space: nowrap;
+          word-break: keep-all;
+          height: 42px;
+          line-height: 42px;
+        }
+        .column-list {
+          min-height: 28px;
+          overflow-y: hidden;
+          overflow-x: hidden;
+          background: hsla(0, 0%, 100%, .1);
+          border: 1px dashed hsla(0, 0%, 100%, .2);
+        }
+        .no-column-tip {
+          position: absolute;
+          top: 50px;
+          left: 0;
+          width: 100%;
+          text-align: center;
+          color: hsla(0, 0%, 100%, .4);
+          span {
+            display: block;
+            height: 12px;
+            line-height: 12px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
+        &.highlight-area {
+          background: rgba(255, 255, 255, .1);
+        }
+      }
+    }
+    .bottom-menus {
+      .refresh-panel button {
+        height: 38px;
+        line-height: 38px;
+        font-size: 12px;
+        color: #fff;
+        text-align: center;
+        width: 100%;
+        background: var(--bin-color-primary);
+        border: none;
+        border-top: 1px solid #000000;
+        outline: none;
+        cursor: pointer;
+      }
+    }
+  }
+
+
+  .bin-tree {
+    color: var(--schema-font-color);
+    .bin-tree-arrow {
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+    }
+    .bin-tree-node-children {
+      padding-left: 10px;
+    }
+    .bin-tree-render-title {
+      .D > i {
+        color: var(--bin-color-primary);
+      }
+      .M > i {
+        color: var(--bin-color-success);
+      }
+    }
+    .bin-tree-title, .bin-tree-render-title {
+      line-height: 18px;
+      border: 1px solid transparent;
+      &.is-selected, &:hover {
+        background: rgba(118, 150, 202, .1);
+        border-color: var(--bin-color-primary);
+      }
+    }
+  }
 }
