新增时间器组件

--- a/src/assets/stylus/schema/base.styl
+++ b/src/assets/stylus/schema/base.styl
@@ -320,7 +320,7 @@ input[type="number"] {
       }
     }
   }
-  .bin-button {
+  .bin-button--default {
     border: 1px solid var(--schema-ui-border);
     color: #a1aeb3;
     background: var(--schema-ui-bg);
