--- a/src/assets/stylus/schema/canvas-editor.styl
+++ b/src/assets/stylus/schema/canvas-editor.styl
@@ -23,6 +23,15 @@ $gui-primary-color = #2483ff;
   &.locked {
     pointer-events: none;
   }
+  .b-icon-lock {
+    pointer-events: auto;
+    cursor: pointer;
+    font-size: 18px;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    z-index: 2;
+  }
 }
 // dv-scale
 .dv-scale {
