实现单组件吸附功能

--- a/src/assets/stylus/index.styl
+++ b/src/assets/stylus/index.styl
@@ -1,4 +1,5 @@
 @import "base/mixins.styl"
 @import "base/base.styl"
+@import "icons/iconfont.styl"
 @import "theme/register.styl"
 @import "schema/index.styl"
