--- a/src/assets/stylus/theme/comps/button.styl
+++ b/src/assets/stylus/theme/comps/button.styl
@@ -6,6 +6,7 @@
     font-size: 12px;
     &:hover {
       background: var(--schema-color-bg-light);
+      color: var(--bin-color-primary);
     }
     &:active {
       background: var(--schema-color-bg);
