--- a/src/assets/stylus/theme/comps/checkbox-radio.styl
+++ b/src/assets/stylus/theme/comps/checkbox-radio.styl
@@ -27,6 +27,7 @@
       &:hover {
         z-index: 0;
         background: var(--schema-color-bg-light);
+        color: var(--bin-color-primary);
       }
       &.is-checked {
         color: #fff;
