忧患旋转角度

--- a/src/assets/stylus/theme/comps/button.styl
+++ b/src/assets/stylus/theme/comps/button.styl
@@ -11,5 +11,14 @@
     &:active {
       background: var(--schema-color-bg);
     }
+    .iconfont-align {
+      position: relative;
+      top: 1px;
+      line-height: 1;
+    }
+  }
+  
+  .bin-button-group {
+    margin-top: 2px;
   }
 }
