实现多选组件，层级面板高亮和配置面板单独组件控制

--- a/src/assets/stylus/schema/config-panel.styl
+++ b/src/assets/stylus/schema/config-panel.styl
@@ -81,6 +81,7 @@
     }
   }
   .basic-setting-wp {
+    border-top: 1px solid var(--schema-color-border);
     border-bottom: 1px solid var(--schema-color-border);
   }
   .setting-panel-gui {
