完成部分组合功能，开始实现拆分功能

--- a/src/assets/stylus/theme/base.styl
+++ b/src/assets/stylus/theme/base.styl
@@ -12,6 +12,7 @@
   --schema-color-bg-deep: #14161a;
   --schema-color-bg-dark: #1d2126;
   --schema-color-bg: #222528;
+  --schema-color-bg-disabled: #4a505783;
   --schema-color-border: #282f3a;
   --schema-color-bg-light: #2e343c;
   --schema-color-hover: #414750;
