--- a/src/assets/stylus/theme/comps/button.styl
+++ b/src/assets/stylus/theme/comps/button.styl
@@ -11,6 +11,11 @@
     &:active {
       background: var(--schema-color-bg);
     }
+    &.is-disabled {
+      background: var(--schema-color-bg-disabled);
+      border-color: var(--schema-ui-border);
+      color: #86898f;
+    }
     .iconfont-align {
       position: relative;
       top: 1px;
@@ -19,6 +24,6 @@
   }
   
   .bin-button-group {
-    margin-top: 2px;
+    margin-top: 3px;
   }
 }
