优化显示预览

--- a/src/assets/stylus/theme/comps/select.styl
+++ b/src/assets/stylus/theme/comps/select.styl
@@ -2,8 +2,7 @@
   .bin-select__popper.bin-popper[role=tooltip] {
     padding: 0;
     background: var(--schema-color-bg-dark);
-    border: 1px solid var(--schema-ui-border);
-    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 0 0 1px var(--schema-ui-border);
     .bin-select-group__title {
       color: #5c6366;
     }
