事件系统准备工作

--- a/src/assets/stylus/schema/config-panel.styl
+++ b/src/assets/stylus/schema/config-panel.styl
@@ -223,3 +223,19 @@
     }
   }
 }
+// 事件配置项
+.events-panel {
+  height: 100%;
+  .events-panel-content {
+    color: var(--schema-font-color);
+    height: calc(100% - 60px);
+    .data-result-title {
+      padding: 10px;
+      border-top: 1px solid var(--schema-color-border);
+      border-bottom: 1px solid var(--schema-color-border);
+    }
+  }
+  .scroll-container{
+    height: calc(100% - 36px);
+  }
+}
