--- a/src/assets/stylus/theme/comps/button.styl
+++ b/src/assets/stylus/theme/comps/button.styl
@@ -22,6 +22,15 @@
       line-height: 1;
     }
   }
+  .bin-button--primary {
+    border: 1px solid var(--schema-ui-border);
+    &:hover {
+      border: 1px solid var(--schema-ui-border);
+    }
+    &.is-disabled {
+      background: var(--bin-color-primary-light3);
+    }
+  }
   
   .bin-button-group {
     margin-top: 3px;
