--- a/src/assets/stylus/theme/comps/input.styl
+++ b/src/assets/stylus/theme/comps/input.styl
@@ -26,6 +26,10 @@
       padding-right: 26px;
     }
   }
+  .bin-input-disabled {
+    background: var(--schema-color-bg-disabled);
+    color: #86898f;
+  }
   .bin-input-number {
     color: var(--schema-font-color);
     background-color: var(--schema-ui-bg);
