--- a/src/assets/stylus/theme/comps/select.styl
+++ b/src/assets/stylus/theme/comps/select.styl
@@ -48,5 +48,10 @@
         }
       }
     }
+    
+    .bin-input-wrapper .b-icon-close-circle-fill {
+      background: transparent;
+      color: #999;
+    }
   }
 }
