--- a/src/assets/stylus/theme/comps/button.styl
+++ b/src/assets/stylus/theme/comps/button.styl
@@ -23,9 +23,9 @@
     }
   }
   .bin-button--primary {
-    border: 1px solid var(--schema-ui-border);
+    border: 1px solid var(--bin-color-primary);
     &:hover {
-      border: 1px solid var(--schema-ui-border);
+      border: 1px solid var(--bin-color-primary);
     }
     &.is-disabled {
       background: var(--bin-color-primary-light3);
