完成组件分组，以及保存设置

--- a/src/assets/stylus/theme/comps/other.styl
+++ b/src/assets/stylus/theme/comps/other.styl
@@ -20,4 +20,8 @@
   .b-iconfont.b-icon-send {
     transform: rotate(-30deg) translate(2px, -2px);
   }
+  .bin-empty {
+    margin: 0;
+    padding: 8px;
+  }
 }
