完成组件内容修改

--- a/src/assets/stylus/schema/canvas-editor.styl
+++ b/src/assets/stylus/schema/canvas-editor.styl
@@ -67,6 +67,7 @@ $gui-primary-color = #2483ff;
   height: 100%;
   cursor: move;
   box-sizing: border-box;
+  cursor: url('@/assets/images/schema/cursor-move.png') 4 4, auto;
   &.is-hide {
     .transform-bg, i[class$="-handler"] {
       display: none;
