--- a/src/assets/stylus/base/base.styl
+++ b/src/assets/stylus/base/base.styl
@@ -23,6 +23,7 @@ body {
   font-family: "PingFang SC", "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif !important;
   font-size: 12px;
   background: #171b22;
+  cursor: url('@/assets/images/schema/cursor-default.png') 4 4, auto;
   &::-webkit-scrollbar {
     display: none;
   }
