完成图片弹窗选择编辑功能。优化全局页面配置图片

--- a/src/assets/stylus/theme/comps/modal.styl
+++ b/src/assets/stylus/theme/comps/modal.styl
@@ -33,6 +33,11 @@
         }
       }
     }
+    .bin-modal-body {
+      min-height: 200px;
+      max-height: 500px;
+      overflow: auto;
+    }
     .bin-modal-footer {
       border-top: none;
     }
