新增图表组件，扩展宽高比锁定功能

--- a/src/assets/stylus/icons/iconfont.styl
+++ b/src/assets/stylus/icons/iconfont.styl
@@ -13,50 +13,50 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.b-icon-align-to-middle-vs:before {
+.iconfont-align.b-icon-align-to-middle-vs:before {
   content: '\e854';
 }
 
-.b-icon-align-to-bottom-vs:before {
+.iconfont-align.b-icon-align-to-bottom-vs:before {
   content: '\e84d';
 }
 
-.b-icon-align-to-center-vs:before {
+.iconfont-align.b-icon-align-to-center-vs:before {
   content: '\e84f';
 }
 
-.b-icon-align-to-left-vs:before {
+.iconfont-align.b-icon-align-to-left-vs:before {
   content: '\e850';
 }
 
-.b-icon-align-to-right-vs:before {
+.iconfont-align.b-icon-align-to-right-vs:before {
   content: '\e851';
 }
 
-.b-icon-align-to-top-vs:before {
+.iconfont-align.b-icon-align-to-top-vs:before {
   content: '\e852';
 }
 
-.b-icon-align-left:before {
+.iconfont-align.b-icon-align-left:before {
   content: '\e63c';
 }
 
-.b-icon-align-bottom:before {
+.iconfont-align.b-icon-align-bottom:before {
   content: '\e642';
 }
 
-.b-icon-align-center:before {
+.iconfont-align.b-icon-align-center:before {
   content: '\e643';
 }
 
-.b-icon-align-middle:before {
+.iconfont-align.b-icon-align-middle:before {
   content: '\e644';
 }
 
-.b-icon-align-top:before {
+.iconfont-align.b-icon-align-top:before {
   content: '\e645';
 }
 
-.b-icon-align-right:before {
+.iconfont-align.b-icon-align-right:before {
   content: '\e646';
 }
